--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
   </div>
 
   <div class="container">
+    <div ng-include="'views/storeFront.html'" ng-controller="legoStore as store"></div>
     <div ng-include="'views/instructions.html'"></div>
   </div>
 
